<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notes_2</string>
    <string name="login_headtext">Enter login and password pls:</string>
    <string name="login_lhint">login</string>
    <string name="login_phint">password</string>
    <string name="login_button_text">Login</string>
    <string name="login_demo_text">Demo</string>
    <string name="register_text">Registering new user:</string>
    <string name="register_passrephint">pass again</string>
    <string name="register_button">Register</string>
    <string name="user_exist_message">user already exist</string>
    <string name="short_password_message">Password is too short</string>
    <string name="passchange_text">Changing password:</string>
    <string name="passchange_oldpass">old password</string>
    <string name="passchange_newpass">new password</string>
    <string name="passchange_repeat">repeat password</string>
    <string name="passchange_buttext">Change</string>
    <string name="wrong_password_message">Password is wrong</string>
    <string name="used_notfnd_message">User was not found</string>
</resources>
