<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_headtext"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <EditText
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_lhint"
        android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_phint"
        android:inputType="textPassword"
        android:password="true"
        android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
            />
    <Button
        android:id="@+id/login_demobutt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_demo_text"
            />

</LinearLayout>