<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />

    <EditText
            android:id="@+id/register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_lhint"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <EditText
            android:id="@+id/register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_phint"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <EditText
            android:id="@+id/register_passrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_passrephint"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_button"
            />
</LinearLayout>