<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:gravity="center"
              android:layout_height="match_parent">
    <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/passchange_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <EditText
            android:id="@+id/passchange_oldpass"
            android:hint="@string/passchange_oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <EditText
            android:id="@+id/passchange_newpass"
            android:hint="@string/passchange_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <EditText
            android:id="@+id/passchange_repeat"
            android:hint="@string/passchange_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_vertical_margin"
            />
    <Button
            android:id="@+id/passchange_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passchange_buttext"
            />

</LinearLayout>